Fixed search component to work on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -61,7 +61,6 @@ html {
 main {
   margin-top: 5rem;
   margin-bottom: 2.5rem;
-  margin-right: 0;
   overflow: auto;
 }
  
